# micromind

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SETUP.md  pyproject.toml
tools/: README.md  copy-git-hooks.sh  format.sh  lint.sh  test.sh  validate-branch-name.sh
tools/hooks/: pre-commit  pre-push
